--- a/client/src/app/shop/shop.component.html
+++ b/client/src/app/shop/shop.component.html
@@ -1,36 +1,38 @@
-<div class="container">
+<div class="container my-3">
     <div class="row">
-        <section class="col-3">
-            <h5 class="text-warning ml-3">Sort</h5>
-            <select class="custom-select my-3" (change)="onSortSelected($event.target.value)">
-                <option 
-                *ngFor="let opt of sortOptions"
-                [value]="opt.value">
-                    {{opt.name}}
-                </option>
-            </select>
+        <section class="col-3 mt-3">
+            <ng-container *ngIf="types && brands">
+                <h5 class="text-warning ml-3">Sort</h5>
+                <select class="custom-select mb-3" (change)="onSortSelected($event.target.value)">
+                    <option 
+                    *ngFor="let opt of sortOptions"
+                    [value]="opt.value">
+                        {{opt.name}}
+                    </option>
+                </select>
 
-            <h5 class="text-warning ml-3">Brands</h5>
-            <ul class="list-group my-3">
-                <li class="list-group-item" 
-                *ngFor="let brand of brands"
-                [class.active]="brand.id === this.shopParams.brandId"
-                [value]="brand.id"
-                (click)="onBrandSelected(brand.id)"
-                >
-                    {{brand.name}}
-                </li>
-            </ul>
+                <h5 class="text-warning ml-3">Brands</h5>
+                <ul class="list-group my-3">
+                    <li class="list-group-item" 
+                    *ngFor="let brand of brands"
+                    [class.active]="brand.id === this.shopParams.brandId"
+                    [value]="brand.id"
+                    (click)="onBrandSelected(brand.id)"
+                    >
+                        {{brand.name}}
+                    </li>
+                </ul>
 
-            <h5 class="text-warning ml-3">Types</h5>
-            <ul class="list-group my-3">
-                <li class="list-group-item" 
-                *ngFor="let type of types"
-                [class.active]="type.id === this.shopParams.typeId"
-                [value]="type.id"
-                (click)="onTypeSelected(type.id)"
-                >{{type.name}}</li>
-            </ul>
+                <h5 class="text-warning ml-3">Types</h5>
+                <ul class="list-group my-3">
+                    <li class="list-group-item" 
+                    *ngFor="let type of types"
+                    [class.active]="type.id === this.shopParams.typeId"
+                    [value]="type.id"
+                    (click)="onTypeSelected(type.id)"
+                    >{{type.name}}</li>
+                </ul>
+            </ng-container>
         </section>
 
         <section class="col-9">
@@ -43,7 +45,7 @@
                 >
                 </app-paging-header>
 
-                <div class="form-inline mt-2">
+                <div class="form-inline" *ngIf="products">
                     <input (keyup.enter)="onSearch()" type="text" class="form-control" #search style="width: 300px;" placeholder="Search">
                     <button class="btn btn-outline-warning ml-2" (click)="onSearch()">Search</button>
                     <button class="btn btn-outline-success ml-2" (click)="onReset()">Reset</button>
