--- a/client/src/app/shop/product-details/product-details.component.html
+++ b/client/src/app/shop/product-details/product-details.component.html
@@ -9,11 +9,11 @@
             <p style="font-size: 2em;">{{product.price | currency}}</p>
     
             <div class="d-flex justify-content-start align-items-center">
-               <i class="fa fa-minus-circle mr-2" style="color: yellow; font-size: 2em;"></i>
-                <span class="text-weight-bold" style="font-size: 1.5em;">2</span>
-                <i class="fa fa-plus-circle mx-2" style="color: yellow; font-size: 2em;"></i>
+               <i (click)="decrementQuantity()" class="fa fa-minus-circle mr-2" style="color: yellow; font-size: 2em;"></i>
+                <span class="text-weight-bold" style="font-size: 1.5em;">{{quantity}}</span>
+                <i (click)="incrementQuantity()" class="fa fa-plus-circle mx-2" style="color: yellow; font-size: 2em;"></i>
     
-                <button class="btn btn-outline-secondary btn-lg ml-4">Add to Cart</button>
+                <button (click)="addItemToBasket()" class="btn btn-outline-primary btn-lg ml-4" routerLink="/basket">Add to Cart</button>
             </div>
         </div>
     
